src/plugins/platforms/android/androidjniinput.cpp
@@ -267,15 +267,11 @@ namespace QtAndroidInput
         }
     }
 
-    static void touchEnd(JNIEnv */*env*/, jobject /*thiz*/, jint /*winId*/, jint /*action*/)
+    static QPointingDevice *getTouchDevice()
     {
-        if (m_touchPoints.isEmpty())
-            return;
-
-        QMutexLocker lock(QtAndroid::platformInterfaceMutex());
         QAndroidPlatformIntegration *platformIntegration = QtAndroid::androidPlatformIntegration();
         if (!platformIntegration)
-            return;
+            return nullptr;
 
         QPointingDevice *touchDevice = platformIntegration->touchDevice();
         if (!touchDevice) {
@@ -291,8 +287,35 @@ namespace QtAndroidInput
             platformIntegration->setTouchDevice(touchDevice);
         }
 
+        return touchDevice;
+    }
+
+    static void touchEnd(JNIEnv * /*env*/, jobject /*thiz*/, jint /*winId*/, jint /*action*/)
+    {
+        if (m_touchPoints.isEmpty())
+            return;
+
+        QMutexLocker lock(QtAndroid::platformInterfaceMutex());
+        QPointingDevice *touchDevice = getTouchDevice();
+        if (!touchDevice)
+            return;
+
         QWindow *window = QtAndroid::topLevelWindowAt(m_touchPoints.at(0).area.center().toPoint());
         QWindowSystemInterface::handleTouchEvent(window, touchDevice, m_touchPoints);
+    }
+
+    static void touchCancel(JNIEnv * /*env*/, jobject /*thiz*/, jint /*winId*/)
+    {
+        if (m_touchPoints.isEmpty())
+            return;
+
+        QMutexLocker lock(QtAndroid::platformInterfaceMutex());
+        QPointingDevice *touchDevice = getTouchDevice();
+        if (!touchDevice)
+            return;
+
+        QWindow *window = QtAndroid::topLevelWindowAt(m_touchPoints.at(0).area.center().toPoint());
+        QWindowSystemInterface::handleTouchCancelEvent(window, touchDevice);
     }
 
     static bool isTabletEventSupported(JNIEnv */*env*/, jobject /*thiz*/)
@@ -846,6 +869,7 @@ namespace QtAndroidInput
         {"touchBegin","(I)V",(void*)touchBegin},
         {"touchAdd","(IIIZIIFFFF)V",(void*)touchAdd},
         {"touchEnd","(II)V",(void*)touchEnd},
+        {"touchCancel", "(I)V", (void *)touchCancel},
         {"mouseDown", "(III)V", (void *)mouseDown},
         {"mouseUp", "(III)V", (void *)mouseUp},
         {"mouseMove", "(III)V", (void *)mouseMove},
